--- a/src/app.scss
+++ b/src/app.scss
@@ -12,3 +12,17 @@ body,
     margin: auto;
   }
 }
+.btn {
+  margin: 0 4px;
+  line-height: 1em;
+}
+
+.isEditing {
+  background-color: #f3f3ff;
+  &:focus {
+    background-color: #f3f3ff;
+  }
+  &.is-invalid {
+    background-color: #fff8f8;
+  }
+}
