--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,19 @@
+/** Foundation-- */
+$p-color: (
+  primary: #3c8dbc,
+  primary-dark: #367fa9,
+  success: #00a65a,
+  success-dark: #030303,
+  danger: #dd4b39,
+  danger-dark: #d73925,
+);
+/* --Foundation **/
+
 html,
 body,
 #app {
   height: 100%;
+  font-size: 14px;
 }
 
 .loading {
@@ -15,9 +27,45 @@ body,
     margin: auto;
   }
 }
+
+/*--- ButtonStyle ---*/
 .btn {
   margin: 0 4px;
-  line-height: 1em;
+  padding: 6px 12px;
+  line-height: 1.5;
+  // size
+  &-sm {
+    padding: 5px 10px;
+    font-size: 12px;
+  }
+  &-lg {
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.3;
+  }
+  // color
+  &-default {
+    color: #444;
+    border-color: #ddd;
+    background-color: #f4f4f4;
+    &:hover {
+      color: #333;
+      background-color: #e6e6e6;
+      border-color: #adadad;
+    }
+  }
+  &-primary {
+    background-color: map-get($map: $p-color, $key: primary) !important;
+    border-color: map-get($map: $p-color, $key: primary-dark) !important;
+  }
+  &-success {
+    background-color: map-get($map: $p-color, $key: success);
+    border-color: map-get($map: $p-color, $key: success-dark);
+  }
+  &-danger {
+    background-color: map-get($map: $p-color, $key: danger);
+    border-color: map-get($map: $p-color, $key: danger-dark);
+  }
 }
 
 .isEditing {
@@ -27,5 +75,43 @@ body,
   }
   &.is-invalid {
     background-color: #fff8f8;
+  }
+}
+
+/*--- TableStyle ---*/
+.c-table {
+  background-color: #fff;
+  border: 1px solid #f4f4f4;
+  & &-head {
+    tr {
+      th {
+        padding: 8px;
+        background-color: transparent;
+        border: 1px solid #f4f4f4;
+        border-bottom-width: 3px;
+      }
+    }
+  }
+  & &-body {
+    tr {
+      &:nth-child(odd) {
+        background-color: #f9f9f9;
+      }
+      td {
+        padding: 8px;
+        vertical-align: middle;
+        border: 1px solid #f4f4f4;
+      }
+    }
+  }
+}
+
+/*--- FormStyle ---*/
+input {
+  padding: 4px 8px;
+  border: 1px solid #d2d6de;
+  &:focus {
+    border-color: map-get($map: $p-color, $key: primary);
+    box-shadow: none;
   }
 }
